# ZY

./: build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/assets/iap/: ZYTK_IAP_APP.apk  version.ini
app/src/main/assets/sh/: kill_log.sh  log.sh  logdebug.sh
app/src/main/cpp/: Deslib.c  Deslib.h  SECLIB.c  SECLIB.h  config.h  nativelib.c
app/src/main/cpp/bsp/: pn512.c  pn512.h  pn512reg.h  public.c  public.h  rtc.c  rtc.h  sam.c  sam.h  statuscode.h  uart.c  uart.h  uartdockpos.c  uartdockpos.h  uartprinter.c  uartprinter.h  uartqr.c  uartqr.h
app/src/main/cpp/card/: CPUCard.c  CPUCard.h  CardInfo.c  CardInfo.h  MifCard.c  MifCard.h  SAM_App.c  SAM_App.h  SingleWalletCard.c  SingleWalletCard.h
app/src/main/cpp/secret/: SecLIB_Define.h  SecLIB_POS.c  SecLIB_POS.h  SecLib_Seeds.h  secret.c  secret.h
app/src/main/res/drawable-nodpi/: cursor.xml  point_select.xml  progress_bg.xml  right_bg.xml  s_senior.xml  s_set.xml  seekbar_bg.xml  system_parameter_down_gary.xml
app/src/main/res/layout/: activity_about_pos.xml  activity_about_pos_menu.xml  activity_check_menu.xml  activity_data_export.xml  activity_edit_text.xml  activity_menu.xml  activity_pwd.xml  activity_record_dispel.xml  activity_scancard.xml  activity_set_sys_all.xml  activity_set_udisk.xml  activity_standby.xml  activity_start.xml  activity_two_menu.xml  activity_wifi.xml  activity_wifi_card_set.xml  activity_wifi_list.xml  menuitem_list_item.xml  progress_layout.xml  set_menu_list_item.xml  toast_layout.xml
app/src/main/res/values/: colors.xml  styles.xml
app/src/zytk35_buspos/: AndroidManifest.xml
app/src/zytk35_buspos/assets/tts/: xiaofeng.jet  xiaoyan.jet
app/src/zytk35_buspos/res/anim/: gridview_item_anim.xml
app/src/zytk35_buspos/res/drawable/: blue_tab_shape.xml  blue_transparent_selector.xml  gray_shape.xml  green_gray_selector.xml  green_shape.xml  red_bg_shape.xml  white_black_selector.xml  white_gray_selector.xml
app/src/zytk35_buspos/res/drawable-nodpi/: avatar_bg_shape.xml  btn_blue_shape.xml  edittext_bg.xml  elect.xml  item_deep_bg.xml  item_deep_down_bg.xml  item_deep_up_bg.xml  item_light_bg.xml  item_light_down_bg.xml  menu_list_item_bg.xml  radio_check_style.xml  relay_radiobutton_select.xml  s_chongzheng.xml  set.xml  set_menu_list_item_bg.xml  system_parameter_up.xml  toast_bg.xml
app/src/zytk35_buspos/res/layout/: activity_about_pos.xml  activity_advanced.xml  activity_base.xml  activity_card.xml  activity_card_pre.xml  activity_cardcommon.xml  activity_check_menu.xml  activity_confirm.xml  activity_edit_text.xml  activity_face_info.xml  activity_face_info_set.xml  activity_id_sound.xml  activity_identitysoundedit.xml  activity_input_ip.xml  activity_main.xml  activity_main_pre.xml  activity_menu.xml  activity_pwd.xml  activity_query_face_rec.xml  activity_query_pay_all.xml  activity_query_plat_rec.xml  activity_record_info.xml  activity_relay.xml  activity_scancard.xml  activity_set_face_info.xml  activity_set_menu.xml  activity_set_net_params.xml  activity_set_pay_all.xml  activity_set_udisk.xml  activity_standby.xml  activity_start.xml  activity_volume_set.xml  activity_wifi.xml  activity_wifi_card_set.xml  activity_wifi_list.xml  horizontal_menu_list_item.xml  item_identity.xml  item_identity_types.xml  layout_loading_face.xml  list_bills_detail_item.xml  (+7 more)
app/src/zytk35_buspos/res/values/: colors.xml  strings.xml  styles.xml
app/src/zytk35_buspos/res/values-w820dp/: attrs.xml
app/src/zytk35_mpos/: AndroidManifest.xml
(+323 files in other folders)
